@@ -1,6 +1,8 @@
 NOCC 1.8.3  ???? ??, ????
 
   Bugs
+    * Bug #2952928 : Title contact list window incorrect: Contact list of %1$
+     (openfan).
     * Bug #2946163 : Unable to copy or move the message... (Evgeny Secret).
 
 NOCC 1.8.2  January 30, 2010
